Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Find Your Spirit Animal
+title: Pour la maison et le bien être
 hero: Find your spirit animal
 subtitle: The animal friendly clothing company
 ---
