Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Pour la maison et le bien être
-hero: Find your spirit animal
-subtitle: The animal friendly clothing company
+hero: Pour la maison et le bien être
+subtitle: Terre Pain Paix
 ---
 
 <div class="content" id="products">
