--- a/terrepainpaix.html
+++ b/terrepainpaix.html
@@ -16,15 +16,27 @@ hero: Our story
 
 <div class="thirds story-points">
 	<div>
-		<h3 class="editable">Passion</h3>
-		<p class="editable">What more could you want from life than drawing animals and bringing happiness to others? We hope this passion show through in our work.</p>
+		<h3 class="editable">
+			Terre
+		</h3>
+		<p class="editable">
+			What more could you want from life than drawing animals and bringing happiness to others? We hope this passion show through in our work.
+		</p>
 	</div>
 	<div>
-		<h3 class="editable">Animal</h3>
-		<p class="editable">It's easy to forget that we're all part of the animal kingdom. Fur is a brand that helps you get in touch with your inner animal.</p>
+		<h3 class="editable">
+			Pain
+		</h3>
+		<p class="editable">
+			It's easy to forget that we're all part of the animal kingdom. Fur is a brand that helps you get in touch with your inner animal.
+		</p>
 	</div>
 	<div>
-		<h3 class="editable">Style</h3>
-		<p class="editable">We like to keep things plain and simple around here to help the animals speak for themselves.</p>
+		<h3 class="editable">
+			Paix
+		</h3>
+		<p class="editable">
+			We like to keep things plain and simple around here to help the animals speak for themselves.
+		</p>
 	</div>
 </div>
