Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Pour la maison et le bien être
-hero: Pour la maison et le bien être
-subtitle: Terre Pain Paix
+hero: Terre Pain Paix
+subtitle: Pour la maison et le bien être
 ---
 
 <div class="content" id="products">
