--- a/art.html
+++ b/art.html
@@ -1,7 +1,7 @@
 ---
-title: Pour nos amis les chats
-hero: Terre Pain Paix
-subtitle: Pour la maison et le bien être
+title: Editions d'artiste
+hero: Editions D'art
+subtitle: Objets avec histoire et attitude
 ---
 
 <div class="content" id="products">
